feat: update CORS configuration and JWT issuer to support dynamic values